webapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olgs-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: olgs-web
  template:
    metadata:
      labels:
        app: olgs-web
    spec:
      containers:
        - name: olgs-web
          image: image-registry.openshift-image-registry.svc:5000/pandeyrr-dev/olgs-web:latest
          ports:
            - containerPort: 80
