webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olgs-web
spec:
  selector:
    app: olgs-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
